--- a/sobre.html
+++ b/sobre.html
@@ -35,7 +35,25 @@
                 <p>Me chamo Paulo, tenho 19 anos, atualmente curso Analise e Desenvolvimento de Sistemas
                <br>No Instituto Federal de Educação, Ciência e Tecnologia do Ceará | Campus Canindé
                 </p>
-                <img src="https://lh3.googleusercontent.com/p/AF1QipNv_Yzx5OsKZdh85h47TfP7_9W9l1GWrMOridb0=s680-w680-h510">
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consectetur quibusdam <br>
+                fugiat enim? Culpa numquam saepe nulla harum impedit atque ad iure fugit temporibus, <br>
+                dolores reiciendis in quae facere voluptate!</p>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consectetur quibusdam <br>
+                fugiat enim? Culpa numquam saepe nulla harum impedit atque ad iure fugit temporibus, <br>
+                dolores reiciendis in quae facere voluptate!</p>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consectetur quibusdam <br>
+                fugiat enim? Culpa numquam saepe nulla harum impedit atque ad iure fugit temporibus, <br>
+                dolores reiciendis in quae facere voluptate!</p>
+
+                <div class="if">
+                    <a href="https://ifce.edu.br"><img src="https://media.licdn.com/dms/image/C4E0BAQHDwn6uugqTbw/company-logo_200_200/0/1524070942721?e=2147483647&v=beta&t=7DBiHiVCd-EH17RVEVorG4KP1-DTIfOyUBR1-u1t87A"></a> 
+                </div>
+                <div class="local">
+                <img src="https://lh3.googleusercontent.com/p/AF1QipNv_Yzx5OsKZdh85h47TfP7_9W9l1GWrMOridb0=s680-w680-h510" >
+            </div>
             </div>
         </div>
     </div>
