--- a/contato.html
+++ b/contato.html
@@ -32,6 +32,15 @@
         <div class="container-text">
             <div class="text">
                 <h1>Meu contato</h1>
+                <h2>Localização</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro excepturi <br>
+                    tempore tenetur autem maiores fugatempora culpa eligendi dolorum,libero <br>
+                    accusamus vel nemo cum saepe. Soluta adipisci illo unde laudantium?</p>
+
+                    <br>
+                    <br>
+                    <br>
+                    <h4>Siga-me</h4>
                 <div class="social">
                     <a href="https://www.instagram.com/paulokksk/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/Paulokksk10"><i class="fa-brands fa-github"></i></a>
@@ -39,6 +48,31 @@
                 </div>
             </div>
         </div>
+        <div class="formulario" >
+            <form action="index.html" method="post"></form>
+            <fieldset>
+            <div>
+                <label for="nome"><strong>Nome: </strong></label>
+                <input type="nome" id="nome" placeholder="Insira seu nome"/>
+            </div>
+            <br>
+            <div>
+                <label for="email"><strong>E-mail: </strong></label>
+                <input type="email" id="email" placeholder="Insira seu E-mail"/>
+            </div>
+            <br>
+            <div>
+                <label for="msg"><strong>Mensagem: </strong></label>
+                <textarea id="msg"></textarea>
+            </div>
+            <br>
+            <div class="button">
+                <button type="submit">Enviar sua mensagem</button>
+            </div>
+        </fieldset>
+        </form>
+        </div>
     </div>
+
 </body>
 </html>
