--- a/sonhos.html
+++ b/sonhos.html
@@ -29,11 +29,26 @@
             </div>
         </header>
 
-        <div class="container-text">
+        <div class="container">
             <div class="text">
                 <h1>Sonhos</h1>
-                <p>Meu sonho é poder ser alguem util e poder ajudar as pessoas ao meu redor
-               <br>pretendo terminar meu curso e arrumar algum emprego antes ou depois disso.
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
+                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
+                fugit laudantium, quis, fugiat corporis vel!<br>
+                </p>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
+                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
+                fugit laudantium, quis, fugiat corporis vel!<br>
+                </p>
+                <h2>Lorem</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
+                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
+                fugit laudantium, quis, fugiat corporis vel!<br>
                 </p>
             </div>
         </div>
