--- a/sonhos.html
+++ b/sonhos.html
@@ -29,27 +29,23 @@
             </div>
         </header>
 
-        <div class="container">
+        <div class="container-text">
             <div class="text">
                 <h1>Sonhos</h1>
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
-                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
-                fugit laudantium, quis, fugiat corporis vel!<br>
-                </p>
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
-                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
-                fugit laudantium, quis, fugiat corporis vel!<br>
-                </p>
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                Alias velit sint mollitia nostrum nulla perspiciatis error <br>
-                iste nobis eligendi nam repellendus molestiae ipsa cupiditate <br>
-                fugit laudantium, quis, fugiat corporis vel!<br>
-                </p>
+                </div>
+                <div class="grid" >
+                    <div class="galery-img">
+                        <img src="https://source.unsplash.com/random/360x360?r=1">
+                    </div>
+                    <div class="galery-img">
+                        <img src="https://source.unsplash.com/random/360x360?r=2">
+                    </div>
+                    <div class="galery-img">
+                        <img src="https://source.unsplash.com/random/360x360?r=3">
+                    </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
